<resources>
    <string name="app_name">Covid3step</string>
    <string name="no_instance_found">App instance is not available because app is not running</string>
    <string name="msg_network_error">Please check your internet connection</string>
    <string name="msg_server_error">Server not responding. Please try again after some time.</string>

    <!--    Notification related-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Events</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!--Facebook related-->
    <string name="facebook_app_id">704493633827634</string>
    <string name="fb_login_protocol_scheme">fb704493633827634</string>

    <!--Twitter related-->
    <string name="twitter_consumer_key">lTLrJCGLI7L77sIPNyhpbgJB1</string>
    <string name="twitter_consumer_secret">7tVMRkM9LjNxPV50EUPcDSUzKHaTtfsxifWX0VibnLaLmqbqaU</string>

    <!--    Screens Related-->
    <!--    Splash-->
    <string name="we_provide_n_peace_of_mind">We Provide\nPeace of Mind</string>

    <!--    Welcome screen-->
    <string name="welcome_line_1">We Provide Peace of Mind</string>
    <string name="welcome_line_2">The APP where you tell others and theytell you where they are in their Covid-19journey …</string>
    <string name="share_your">Share your</string>
    <string name="test_results">Test Results</string>
    <string name="vaccine_history">Vaccine History</string>
    <string name="welcome_line_3">Ultra Secure Digital VaultAll Labs/Healthcare Companies</string>
    <string name="get_started">Get started</string>

    <!--    Login screen-->
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="or_login_with">OR Login with</string>
    <string name="dont_have_account">Don’t Have Account?</string>

    <!--Register Screen-->
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="suffix">Suffix</string>
    <string name="enter_your_suffix">Enter your Suffix</string>
    <string name="address_1">Address 1</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="address_2">Address 2</string>
    <string name="enter_your_address_line_2">Enter your Address line 2</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="your_city">Your City</string>
    <string name="state">State</string>
    <string name="your_state">Your State</string>
    <string name="zip">Zip</string>
    <string name="area_zip_code">Area Zip code</string>
    <string name="verify_by_pid">Verify by PID</string>

    <!--Verify Screen-->
    <string name="please_verify">Please Verify</string>
    <string name="verify_info">Please Upload your user ID andyour selfie and OTP so that we can Verify its you.</string>
    <string name="your_selfie">Your Selfie</string>
    <string name="cameraBrowse">Camera / Browse</string>
    <string name="user_id">User ID</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_sent_on_your_mobile_number">We sent on your mobile number</string>
    <string name="verify_now">Verify Now</string>

    <!--Dashboard-->
    <string name="covid_one_step">Covid One Stop</string>
    <string name="recent_test_results">Recent Test Results</string>
    <string name="covid19_test_results">Covid-19 Test Result</string>
    <string name="july272020">July 27, 2020 at 1:04 AM</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="viewall">View All</string>
    <string name="vaccine">Vaccine</string>
    <string name="covid19_vaccine">Covid-19 Vaccine</string>
    <string name="astragenica">Astra Genica</string>
    <string name="hg1_1234">HG1-1234</string>
    <string name="poweredby">Powered By</string>
    <string name="enter_new_test">Enter New Test/Vaccine</string>

    <!--Recent Test Result-->

    <string name="recent_test_result">Recent Test Results</string>

    <!--Vaccine-->
    <!--New Covid19 Test/Vaccine-->
    <string name="test">Test</string>
    <string name="date">Date</string>
    <string name="date7102020">7/10/2020</string>
    <string name="labvendor">Lab/Vendor</string>
    <string name="type_any_keyboard">Type any keyword</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="personal_id">Personal ID</string>
    <string name="upload">Upload</string>
    <string name="self_administered">Self Administered?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clinician_verified">Clinician Verified?</string>
    <string name="clinicial">Clinical</string>
    <string name="clinicial_nam">Clinical Name</string>
    <string name="enter_clinicial_nam">Enter Clinical Name</string>
    <string name="id">ID</string>
    <string name="date_result_received">Date Result Received</string>
    <string name="result">Result</string>
    <string name="select_result">Select Result</string>
    <string name="comments">Comments</string>
    <string name="placeholder">Placeholder</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="save">SAVE</string>

    <!--Covid Test Details Page-->
    <string name="date07092020">07-09-2020</string>
    <string name="ben_martin">Ben Martin</string>
    <string name="the_clinical_lab">The Clinical Lab</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam facilisis, enim tincidunt facilisis maximus, ex sem dapibus erat, et suscipit nisi risus eu nisl. Quisque eu feugiat felis, eget hendrerit ligula.</string>

    <!--Profile Page-->
    <string name="profile">Profile</string>
    <string name="new_covid19_test_vaccine">New Covid19 Test/Vaccine</string>
    <string name="enter_new_test_vaccine">Enter New Test/Vaccine</string>
    <string name="covid_19_antibody_test">COVID-19 Antibody Test</string>
    <string name="vaccination">vaccination</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>

    <!--Validation-->
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_user_name">Please Enter Username</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_your_state">Please enter your state</string>
    <string name="enter_your_zip_code">Please enter your Zip code</string>
    <string name="match_password_confirm_password">Password and Confirm Password should be same</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
</resources>